--- a/services.html
+++ b/services.html
@@ -50,6 +50,7 @@
     
      <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
+       <iframe width="540" height="304" src="<p><a href="https://www.dronedeploy.com/solutions/agriculture/?wvideo=y8ok4tz0q2"><img src="https://embedwistia-a.akamaihd.net/deliveries/9ea418f2b06b52d0723859c1249404e7fbb84215.jpg?image_play_button_size=2x&amp;image_crop_resized=960x524&amp;image_play_button=1&amp;image_play_button_color=2196f3e0" width="400" height="225" style="width: 400px; height: 225px;"></a></p><p><a href="https://www.dronedeploy.com/solutions/agriculture/?wvideo=y8ok4tz0q2">Drone Software for Agriculture | DroneDeploy</a></p>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h3>City of Nanaimo – Roundabout</h3>
        <p> Use this area to explain a bit of stuff from farmers edge </p>
             
