--- a/port.html
+++ b/port.html
@@ -78,7 +78,7 @@
         <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
     </div>    
     <div class="footer-bottom-area">
-        <div class="container">
+        <div class="footer-container">
           <div class="row">
             <div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
                     </div>
