--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
     
      <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
-       <iframe width="540" height="304" src="<p><a href="https://youtu.be/O0v22sM8TAc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <img src="Images/PADrone.jpg" width="400" height="250">
     <h3>City of Nanaimo – Roundabout</h3>
        <p> Use this area to explain a bit of stuff from farmers edge </p>
             
