--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </div>
   
   <div class="index-column">
-    <h2></h2>
-    <p></p>
+    <h2>Cloud Based Services</h2>
+    <p>We provide our customers with the opportunity to access centralized data and software. Furthermore, we offer archiving and improved security.</p>
   </div>
 </div>
 <div class="index-background">
