--- a/services.html
+++ b/services.html
@@ -33,10 +33,17 @@
  <div class="row">
   <div class="column1">
     <h2>GIS Services</h2>
-    <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
+    <p> CDI Consulting provides a host of cutting edge GIS services that supplies our clients with valuable tools for precise decisions</p>
     <img src="Images/GISServicesImage.jpg" width="400" height="250">
-    <p>WINNIPEG, Manitoba – October 24, 2018 — CDI Consulting released a ground-breaking, digital tool that automatically scans satellite imagery and notifies growers of changes in their fields. Building upon the release of daily satellite imagery in 2017 and over 70 new features and tools launched this year, new Health Change Maps and Notifications function as an integrated toolset designed to accelerate the speed of decision-making when crop issues emerge. This unique precision digital tool pinpoints potential problems, including pests, disease, nutrient deficiencies, inclement weather, missed application, equipment malfunction, drainage issues, and more. This innovative technology enhances the value of daily imagery by helping growers save time, identify issues quicker, and react to crop stress before yield is impacted.</p>
-    <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/-->
+    <p>Our list of GIS services include: </p>
+    <p> Address geocoding and reverse geocoding</p>
+    <p> Cartography and cartographic modeling</p>
+    <p> Data analysis, data output, and data production</p>
+    <p> Geostatistics</p>
+    <p> Routing for emergency and distribution services</p>
+    <p> Multi-criteria decision analysis</p>
+    <p> Topological modelling</p>
+    <p> Urban planning and design</p> 
   </div>
   
   <div class="column1">
