--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
   <div class="index-column">
   </div>
 </div>
-<div class="index-background">
-  <h2>Cloud Based Services</h2>
+<div class="row">
+  <div class="index-column">
+    <h2>Cloud Based Services</h2>
     <p>We provide our customers with the opportunity to access centralized data and software. Furthermore, we offer archiving and improved security.</p>
-  
+  </div>
+</div>
+<div class="index-background">
 </div>
 <footer>
     <div class="footer">  
