--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
   <div class="column1">
     <h2>Construction Services</h2>
     <p> CDI Consulting is an industry leader in equips clients top of the line aerial site intelligence for construction sites  </p>
-    <h3>GIS services include: </h3>
+    <h3>Construction services include: </h3>
     <p> Urban planning and design</p>
     <p> 2D high-resolution drone maps</p>
     <p> 3D construction site models</p>
