--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
               </ul> 
           </div>
         </div> 
-      <a href="contact">Contact</a>
-      <a href="port">Portfolio</a>
-      <a href="services">GIS Services</a>
-      <a href="about">About Us</a>
-      <a href="index" class="active">Home</a>
+        <div class="footer-container">
+
+          <a href="contact">Contact</a>
+          <a href="port">Portfolio</a>
+          <a href="services">GIS Services</a>
+          <a href="about">About Us</a>
+          <a href="index" class="active">Home</a>
+        </div>
       </div>
         <div class="rightside-footer">
             <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
