--- a/port.html
+++ b/port.html
@@ -75,10 +75,10 @@
         <div class="footer-container">
 
           <a href="contact">Contact</a>
-          <a href="port">Portfolio</a>
+          <a href="port" class="active">Portfolio</a>
           <a href="services">GIS Services</a>
           <a href="about">About Us</a>
-          <a href="index" class="active">Home</a>
+          <a href="index">Home</a>
         </div>
       </div>
         <div class="rightside-footer">
