--- a/services.html
+++ b/services.html
@@ -106,9 +106,9 @@
         
                   <a href="contact">Contact</a>
                   <a href="port">Portfolio</a>
-                  <a href="services">GIS Services</a>
+                  <a href="services" class="active">GIS Services</a>
                   <a href="about">About Us</a>
-                  <a href="index" class="active">Home</a>
+                  <a href="index">Home</a>
                 </div>
               </div>
                 <div class="rightside-footer">
