--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
     <li>10 Emails</li>
     <li>10 Domains</li>
     <li>1GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>      
   
