--- a/services.html
+++ b/services.html
@@ -70,6 +70,7 @@
        <p> Soil nutrient mapping</p> 
             
   </div>
+</div>
 
 <div class="columns2">
   <ul class="price">
@@ -86,7 +87,7 @@
 
   
     
-  <footer>
+<footer>
     <div class="footer">  
       <div class="leftside-footer">			
         <div class="text">
