--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <div class="row">
   <div class="index-column">
     <h2>Cloud Based Services</h2>
+    <img src="Images/Cloud-Computing-1.jpg">
     <p>We provide our customers with the opportunity to access centralized data and software. Furthermore, we offer archiving and improved security.</p>
   </div>
 </div>
