--- a/services.html
+++ b/services.html
@@ -55,12 +55,12 @@
     <p> 3D construction site models</p>
     <p> Statistical reports</p>
     
-      <img src="Images/DroneConstruction.jpeg" width="400" height="250">  
+      <img src="Images/DroneConstruction.jpeg" class="responsive5">  
     </div>
     
      <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
-       <img src="Images/PADrone.jpg" width="400" height="250">
+       <img src="Images/PADrone.jpg" class="responsive5">
     <p> CDI Consulting precision agriculture drone data gives farmers critical information to aid in achieving reduced costs and maximum yields</p>
        <h3> Precision agriculture services include: </h3>
        <p> NDVI prescription maps</p>
