testing image column

--- a/about.html
+++ b/about.html
@@ -78,13 +78,14 @@
 		<div class="column">
 			<div class="card">
 			<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
+			</div>
+		<div class="column">
 			<div class="container">
 				<h2>Danielle Cotton</h2>
 				<p class="title">Co-founder &amp; President</p>
 				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
 				<p>danielle.cotton@CDIConsulting.com</p>
 				<p><button class="button">Contact</button></p>
-			</div>
 			</div>
 		</div>
 			
