--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
   <div class="column1">
     <h2>GIS Services</h2>
     <p> CDI Consulting provides a host of cutting edge GIS services that supplies our clients with valuable tools for making precise decisions</p>
-    <img src="Images/GISServicesImage.jpg" width="400" height="250">
+    <img src="Images/GISServicesImage.jpg" class="responsive5">
     <h3>GIS services include: </h3>
     <p> Address geocoding and reverse geocoding</p>
     <p> Cartography and cartographic modeling</p>
