--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
 <div class="parallax-text">
-	<h3>ABOUT CDI GSI CONSULTING</h3>
+	<h3>ABOUT CDI GIS CONSULTING</h3>
 	<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
 </div>
 </div>
