--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 	<div class="row">
 		<div class="column">
 			<div class="card">
-			<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
+				<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
 			</div>
 		<div class="column">
 			<div class="container">
@@ -91,7 +91,9 @@
 			
 		<div class="column">
 			<div class="card">
-			<img src="Images/Christine.gif" alt="Christine" style="width:50%">
+				<img src="Images/Christine.gif" alt="Christine" style="width:50%">
+			</div>
+		<div class="column">
 			<div class="container">
 				<h2>Christine Lacanilao</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
@@ -99,19 +101,19 @@
 				<p>christine.lacanilao@CDIConsulting.com</p>
 				<p><button class="button">Contact</button></p>
 			</div>
-			</div>
 		</div>
 		
 		<div class="column">
 			<div class="card">
-			<img src="Images/Ian.jpg" alt="Ian" style="width:50%">
+				<img src="Images/Ian.jpg" alt="Ian" style="width:50%">
+			</div>
+		<div class="column">
 			<div class="container">
 				<h2>Ian Wright</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
 				<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
 				<p>ian.wright@CDIConsulting.com</p>
 				<p><button class="button">Contact</button></p>
-			</div>
 			</div>
 		</div>
 	</div>
