--- a/services.html
+++ b/services.html
@@ -71,6 +71,11 @@
             
   </div>
 
+ <header>
+  <h1>Pricing</h1>
+</header>
+   
+   
 <div class="columns2">
   <ul class="price">
     <li class="header2">Basic</li>
