trying to make a background

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
               </ul> 
           </div>
         </div> 
+        <div class="index-background">
+
+        </div>
         <div class="footer-container">
 
           <a href="contact">Contact</a>
