--- a/services.html
+++ b/services.html
@@ -70,11 +70,13 @@
        <p> Soil nutrient mapping</p> 
             
   </div>
-
- <header>
-  <h1>Pricing</h1>
-</header>
    
+   
+<div class="pricing5">
+  <header>
+  <h1>Pricing</h1>
+  </header>
+</div> 
    
 <div class="columns2">
   <ul class="price">
