--- a/about.html
+++ b/about.html
@@ -73,20 +73,19 @@
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="parallax-text">
-	<h2>Meet the Team</h2>
-	<div class="row">
-		<div class="column">
-			<div class="card">
-				<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
-			</div>
-		<div class="column">
-			<div class="container">
-				<h2>Danielle Cotton</h2>
-				<p class="title">Co-founder &amp; President</p>
-				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
-				<p>danielle.cotton@CDIConsulting.com</p>
-				<p><button class="button">Contact</button></p>
-			</div>
+	<div class="team-container">
+		<h2>Meet the Team</h2>
+		
+		<div class="card">
+			<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
+		</div>
+
+		<div class="container">
+			<h2>Danielle Cotton</h2>
+			<p class="title">Co-founder &amp; President</p>
+			<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
+			<p>danielle.cotton@CDIConsulting.com</p>
+			<p><button class="button">Contact</button></p>
 		</div>
 			
 		<div class="column">
