--- a/about.html
+++ b/about.html
@@ -76,24 +76,22 @@
 	<div class="team-container">
 		<h2>Meet the Team</h2>
 		
-		<div class="card">
-			<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
-		</div>
-
-		<div class="container">
-			<h2>Danielle Cotton</h2>
-			<p class="title">Co-founder &amp; President</p>
-			<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
-			<p>danielle.cotton@CDIConsulting.com</p>
-			<p><button class="button">Contact</button></p>
-		</div>
-			
-		<div class="column">
-			<div class="card">
-				<img src="Images/Christine.gif" alt="Christine" style="width:50%">
+		<div class="card-container">
+			<div class="img-container">
+				<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
+			<div class="card-content">
+				<h2>Danielle Cotton</h2>
+				<p class="title">Co-founder &amp; President</p>
+				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
+				<p>danielle.cotton@CDIConsulting.com</p>
+				<p><button class="button">Contact</button></p>
 			</div>
-		<div class="column">
-			<div class="container">
+		
+		<div class="card-container">
+			<div class="img-container">
+				<img src="Images/Christine.gif" alt="Christine" style="width:50%">
+
+			<div class="card-content">
 				<h2>Christine Lacanilao</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
 				<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
@@ -102,12 +100,11 @@
 			</div>
 		</div>
 		
-		<div class="column">
-			<div class="card">
+		<div class="card-container">
+			<div class="img-container">
 				<img src="Images/Ian.jpg" alt="Ian" style="width:50%">
-			</div>
-		<div class="column">
-			<div class="container">
+		
+			<div class="card-content">
 				<h2>Ian Wright</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
 				<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
