--- a/services.html
+++ b/services.html
@@ -77,7 +77,8 @@
   <h1>Pricing</h1>
   </header>
 </div> 
-   
+  <p> </p>
+  <p> </p>
 <div class="columns2">
   <ul class="price">
     <li class="header2">Basic</li>
@@ -98,7 +99,7 @@
     <li>25 Emails</li>
     <li>25 Domains</li>
     <li>2GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>
 
@@ -110,7 +111,7 @@
     <li>50 Emails</li>
     <li>50 Domains</li>
     <li>5GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>
   
