--- a/port.html
+++ b/port.html
@@ -56,8 +56,9 @@
   </div>
   
   <div class="column">
-    <h2></h2>
-    <p></p>
+    <h2>Leaf Area Index Canada</h2>
+    <img src="Images/leafareaindexcanada.jfif">
+    <p>Recently, we have been called upon to create a Leaf Area Index report for all of Canada. This indepth look at the leaf area index was a great success. </p>
   </div>
 </div>
 <footer>
