--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
 				<p>danielle.cotton@CDIConsulting.com</p>
 				<p><button class="button">Contact</button></p>
 			</div>
+		</div>
 		
 		<div class="card-container">
 			<div class="img-container">
