--- a/about.html
+++ b/about.html
@@ -79,6 +79,7 @@
 		<div class="card-container">
 			<div class="img-container">
 				<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
+			</div>
 			<div class="card-content">
 				<h2>Danielle Cotton</h2>
 				<p class="title">Co-founder &amp; President</p>
@@ -91,7 +92,7 @@
 		<div class="card-container">
 			<div class="img-container">
 				<img src="Images/Christine.gif" alt="Christine" style="width:50%">
-
+			</div>
 			<div class="card-content">
 				<h2>Christine Lacanilao</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
@@ -104,7 +105,7 @@
 		<div class="card-container">
 			<div class="img-container">
 				<img src="Images/Ian.jpg" alt="Ian" style="width:50%">
-		
+			</div>
 			<div class="card-content">
 				<h2>Ian Wright</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
