--- a/port.html
+++ b/port.html
@@ -42,7 +42,7 @@
     <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
     <img src="Images/Crop-Health-Change-Notification-Release-Blog-Post-2-1080x675.jpg" width="400" height="250">
     <p>WINNIPEG, Manitoba – October 24, 2018 — CDI Consulting released a ground-breaking, digital tool that automatically scans satellite imagery and notifies growers of changes in their fields. Building upon the release of daily satellite imagery in 2017 and over 70 new features and tools launched this year, new Health Change Maps and Notifications function as an integrated toolset designed to accelerate the speed of decision-making when crop issues emerge. This unique precision digital tool pinpoints potential problems, including pests, disease, nutrient deficiencies, inclement weather, missed application, equipment malfunction, drainage issues, and more. This innovative technology enhances the value of daily imagery by helping growers save time, identify issues quicker, and react to crop stress before yield is impacted.</p>
-    <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/-->
+    <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/; slightly modified to suit our fake comapny's page, obviously we did not do this-->
   </div>
   
   <div class="column">
@@ -52,13 +52,14 @@
 
         Output files were provided to the City of Toronto for the purpose of reviewing traffic patterns and adjusting for possible safety concerns within the roundabout. </p>
         <iframe width="540" height="304" src="https://www.youtube.com/embed/VeWLlTsBCm0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/-->
+    <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/; slightly modified to look as if our consulting group did this, but obviously we did not-->
   </div>
   
   <div class="column">
     <h2>Leaf Area Index Canada</h2>
     <img src="Images/leafareaindexcanada.jfif">
     <p>Recently, we have been called upon to create a Leaf Area Index report for all of Canada. This indepth look at the leaf area index was a great success. </p>
+  <!-- Photograph from http://faculty.geog.utoronto.ca/Chen/Chen%27s%20homepage/PDFfiles2/TGARS2006-deng-proof.pdf-->
   </div>
 </div>
 <footer>
