--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 				<p class="title">Co-founder &amp; President</p>
 				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
 				<p>danielle.cotton@CDIConsulting.com</p>
-				<p><button class="button">Contact</button></p>
+				<p><button class="button" target="_blank" href="mailto:danielle.cotton@CDIConsulting.com">Contact</button></p>
 			</div>
 		</div>
 		
@@ -98,7 +98,7 @@
 				<p class="title">Co-founder &amp; Consultant</p>
 				<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
 				<p>christine.lacanilao@CDIConsulting.com</p>
-				<p><button class="button">Contact</button></p>
+				<p><button class="button" target="_blank" href="mailto:christine.lacanilao@CDIConsultin.com">Contact</button></p>
 			</div>
 		</div>
 		
@@ -111,7 +111,7 @@
 				<p class="title">Co-founder &amp; Consultant</p>
 				<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
 				<p>ian.wright@CDIConsulting.com</p>
-				<p><button class="button">Contact</button></p>
+				<p><button class="button" target="_blank" href="mailto:ian.wright@CDIConsulting.com">Contact</button></p>
 			</div>
 		</div>
 	</div>
