--- a/services.html
+++ b/services.html
@@ -81,41 +81,43 @@
   <p> </p>
 <div class="columns2">
   <ul class="price">
-    <li class="header2">Basic</li>
-    <li class="grey">$ 9.99 / year</li>
-    <li>10GB Storage</li>
-    <li>10 Emails</li>
-    <li>10 Domains</li>
-    <li>1GB Bandwidth</li>
+    <li class="header2">GIS</li>
+    <li class="grey">$ 59.99 / hour</li>
+    <li>Address Coding</li>
+    <li>Cartographic Modeling</li>
+    <li>Data Analysis</li>
+    <li>Geostatistics</li>
     <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>      
 
 <div class="columns2">
   <ul class="price">
-    <li class="header2" style="background-color:#4CAF50">Pro</li>
-    <li class="grey">$ 24.99 / year</li>
-    <li>25GB Storage</li>
-    <li>25 Emails</li>
-    <li>25 Domains</li>
-    <li>2GB Bandwidth</li>
+    <li class="header2">Construction</li>
+    <li class="grey">$ 69.99 / hour</li>
+    <li>Urban Planning</li>
+    <li>2D Drone Maps</li>
+    <li>3D Site Models</li>
+    <li>Statistical Report</li>
     <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>
 
 <div class="columns2">
   <ul class="price">
-    <li class="header2">Premium</li>
-    <li class="grey">$ 49.99 / year</li>
-    <li>50GB Storage</li>
-    <li>50 Emails</li>
-    <li>50 Domains</li>
-    <li>5GB Bandwidth</li>
+    <li class="header2">Precision Agriculture</li>
+    <li class="grey">$ 79.99 / hour</li>
+    <li>NDVI Maps</li>
+    <li>Leaf Area Index Maps</li>
+    <li>Soil Moisture Maps</li>
+    <li>Soil Nutrient Maps</li>
     <li class="grey"><a href="#" class="button2">Sign Up</a></li>
   </ul>
 </div>
   
-    
+ <p> </p>
+  <p> </p>
+  
 <footer>
     <div class="footer">  
       <div class="leftside-footer">			
