look sso ugly; testing

--- a/about.html
+++ b/about.html
@@ -73,48 +73,42 @@
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="parallax-text">
-	<div class="team-container">
-		<h2>Meet the Team</h2>
-		
-		<div class="card-container">
-			<div class="img-container">
-				<img src="Images/Dani.jpg" alt="Danielle" style="width:50%">
-			</div>
-			<div class="card-content">
-				<h2>Danielle Cotton</h2>
-				<p class="title">Co-founder &amp; President</p>
-				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
-				<p>danielle.cotton@CDIConsulting.com</p>
-				<p><button class="button" target="_blank" href="mailto:danielle.cotton@CDIConsulting.com">Contact</button></p>
-			</div>
-		</div>
-		
-		<div class="card-container">
-			<div class="img-container">
-				<img src="Images/Christine.gif" alt="Christine" style="width:50%">
-			</div>
-			<div class="card-content">
-				<h2>Christine Lacanilao</h2>
-				<p class="title">Co-founder &amp; Consultant</p>
-				<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
-				<p>christine.lacanilao@CDIConsulting.com</p>
-				<p><button class="button" target="_blank" href="mailto:christine.lacanilao@CDIConsultin.com">Contact</button></p>
-			</div>
-		</div>
-		
-		<div class="card-container">
-			<div class="img-container">
-				<img src="Images/Ian.jpg" alt="Ian" style="width:50%">
-			</div>
-			<div class="card-content">
-				<h2>Ian Wright</h2>
-				<p class="title">Co-founder &amp; Consultant</p>
-				<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
-				<p>ian.wright@CDIConsulting.com</p>
-				<p><button class="button" target="_blank" href="mailto:ian.wright@CDIConsulting.com">Contact</button></p>
-			</div>
-		</div>
+	<h2>Meet the Team</h2>
+
+	<div class="card">
+	<h4>Danielle Cotton</h4>
+	<img src="Dani.jpg" alt="Danielle" style="width:20%">
 	</div>
+	<div class="container">
+		<p class="title">Co-founder &amp; President</p>
+		<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
+		<p>danielle.cotton@CDIConsulting.com</p>
+	</div>
+
+	<div class="card">
+	<h4>Christine Lacanilao</h4>
+	<img src="Images/Christine.gif" alt="Christine" style="width:20%">
+	</div>
+
+	<div class="container">
+		<p class="title">Co-founder &amp; Consultant</p>
+		<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
+		<p>christine.lacanilao@CDIConsulting.com</p>
+	</div>
+	
+	<div class="card">
+	<h4>Ian Wright</h4>
+	<img src="Images/Ian.jpg" alt="Ian" style="width:20%">
+	</div>
+
+	<div class="container">
+		<p class="title">Co-founder &amp; Consultant</p>
+		<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
+		<p>ian.wright@CDIConsulting.com</p>
+	</div>
+			
+	</div>
+	
 </div>
 
 </body>
