--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
 	<div class="card">
 	<h4>Danielle Cotton</h4>
-	<img src="Dani.jpg" alt="Danielle" style="width:20%">
+	<img src="Images/Dani.jpg" alt="Danielle" style="width:20%">
 	</div>
 	<div class="container">
 		<p class="title">Co-founder &amp; President</p>
