--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     https://www.w3schools.com/howto/howto_css_contact_section.asp
     https://www.w3schools.com/howto/howto_css_form_on_image.asp-->
     <div class="Section-1"> <!--Email contact us-->   
-        <form action="/action_page.php">
+        <form action="/action_page.php" class="container-container">
             <h2>Contact Us</h2>
             <p>We would love to hear from you, leave us a message:</p> 
 
