--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <h2>Cloud Based Services</h2>
     <img src="Images/Cloud-Computing-1.jpg">
     <p>We provide our customers with the opportunity to access centralized data and software. Furthermore, we offer archiving and improved security.</p>
+    <p>We can enable better agility in operating applications, while allowing customers to maintain control over the entire environment.</p>
   </div>
 </div>
 </body>
