--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
     <li class="grey">Cartographic Modeling</li>
     <li class="grey">Data Analysis</li>
     <li class="grey">Geostatistics</li>
-    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
+    <li class="grey"><a href="contact" class="button2">Sign Up</a></li>
   </ul>
 </div>      
 
@@ -99,7 +99,7 @@
     <li class="grey">2D Drone Maps</li>
     <li class="grey">3D Site Models</li>
     <li class="grey">Statistical Report</li>
-    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
+    <li class="grey"><a href="contact" class="button2">Sign Up</a></li>
   </ul>
 </div>
 
@@ -111,7 +111,7 @@
     <li class="grey">Leaf Area Index Maps</li>
     <li class="grey">Soil Moisture Maps</li>
     <li class="grey">Soil Nutrient Maps</li>
-    <li class="grey"><a href="#" class="button2">Sign Up</a></li>
+    <li class="grey"><a href="contact" class="button2">Sign Up</a></li>
   </ul>
 </div>
   
