fixing footer css

--- a/port.html
+++ b/port.html
@@ -57,7 +57,7 @@
   
   <div class="column">
     <h2>Leaf Area Index Canada</h2>
-    <img src="Images/leafareaindexcanada.jfif">
+    <img src="Images/leafareaindexcanada.jfif" width="400" height="250">
     <p>Recently, we have been called upon to create a Leaf Area Index report for all of Canada. This indepth look at the leaf area index was a great success. </p>
   <!-- Photograph from http://faculty.geog.utoronto.ca/Chen/Chen%27s%20homepage/PDFfiles2/TGARS2006-deng-proof.pdf-->
   </div>
