--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
         </div> 
         
         <div class="footer-container">
-
-          <a href="contact">Contact</a>
-          <a href="port">Portfolio</a>
-          <a href="services">GIS Services</a>
-          <a href="about">About Us</a>
-          <a href="index" class="active">Home</a>
+          <div class="footer-links">
+            <a href="contact">Contact</a>
+            <a href="port">Portfolio</a>
+            <a href="services">GIS Services</a>
+            <a href="about">About Us</a>
+            <a href="index" class="active">Home</a>
+          </div>
         </div>
       </div>
         <div class="rightside-footer">
