--- a/port.html
+++ b/port.html
@@ -37,7 +37,7 @@
 </html>
 
 <div class="row">
-  <div class="column">
+  <div class="port-column">
     <h2>Recent Agriculture Innovations</h2>
     <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
     <img src="Images/Crop-Health-Change-Notification-Release-Blog-Post-2-1080x675.jpg" width="400" height="250">
@@ -45,7 +45,7 @@
     <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/; slightly modified to suit our fake comapny's page, obviously we did not do this-->
   </div>
   
-  <div class="column">
+  <div class="port-column">
     <h2>Recent Mapping Projects</h2>
     <h3>City of Toronto – Roundabout</h3>
     <p> The City of Toronto Engineering and Public Works Department tasked CDI to use our UAV technology to capture high definition video of traffic flow in a newly constructed “roundabout” during peak morning and afternoon time periods. CDI retains all necessary Transport Canada permissions for drone operation. Our UAV pilot captured over 1.5 hours of video over 9 total flights while ground support staff observed for possible safety concerns and directed foot traffic away from the flight path.
@@ -55,7 +55,7 @@
     <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/; slightly modified to look as if our consulting group did this, but obviously we did not-->
   </div>
   
-  <div class="column">
+  <div class="port-column">
     <h2>Leaf Area Index Canada</h2>
     <img src="Images/leafareaindexcanada.jfif" width="400" height="250">
     <p>Recently, we have been called upon to create a Leaf Area Index report for all of Canada. This indepth look at the leaf area index was a great success. </p>
