--- a/services.html
+++ b/services.html
@@ -74,7 +74,8 @@
    
 <div class="header5">
   <header>
-  <h1>Pricing</h1>
+  <h1>Unlock the Power of GIS and Drone Data</h1>
+    <h3>Pick your required service and our team will will be in touch</h>
   </header>
 </div> 
   <p> </p>
