--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
 <div class="header5">
   <header>
   <h1>Unlock the Power of GIS and Drone Data</h1>
-    <h3>Pick your required service and our team will be in touch</h3>
+    <h3> Select from the following services and our team will connect with you shortly </h3>
     <h4> First time customers receive a free consultation </h4>
     <h4> For combination packages please contact us directly </h4>
   </header>
