testing banner image

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,13 @@
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
 </head>
 
-<img src="Images/cdilogo2.png" class="logo">
+<body>
+
+<div class="wrapperBanner">
+    <div class="banner-image">
+        <img src="Images/cdilogo2.png" class="logo">
+    </div>
+</div>
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
 
@@ -24,7 +30,7 @@
 </div>  
 <script src="javascript.js"></script>
 
-<body>
+
 
 <div class="background-1">
     <!--Inspired from 
@@ -293,6 +299,10 @@
         <input type="submit" value="Submit">
         </form>
     </div>
+</div>
+
+<div class="contact-info">
+    <
 </div>
     
 </body>
