--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
 <body>
 
 <div class="wrapperBanner">
+    <div class="banner-image">
+        <img src="Images/cdilogo2.png" class="logo">
+    </div>
 </div>
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
@@ -299,7 +302,7 @@
 </div>
 
 <div class="contact-info">
-    <
+
 </div>
     
 </body>
