--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<img src="Images/cdilogo2.png" class="logo">
+<img src="Images/cdilogo2.png" class="logo"> https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome creation and not sourced from the internet */
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 
@@ -35,7 +35,7 @@
     <div class="column1">
       <h2>GIS Services</h2>
       <p> CDI Consulting provides a host of cutting edge GIS services that supplies our clients with valuable tools for making precise decisions</p>
-      <img src="Images/GISServicesImage.jpg" class="responsive5">
+      <img src="Images/GISServicesImage.jpg" class="responsive5"> /* Image sourced from https://foresttech.events/looking-at-the-future-of-gis/ */
       <h3>GIS services include: </h3>
       <p> Address geocoding and reverse geocoding</p>
       <p> Cartography and cartographic modeling</p>
@@ -55,12 +55,12 @@
       <p> 2D high-resolution drone maps</p>
       <p> 3D construction site models</p>
       <p> Statistical reports</p>
-      <img src="Images/DroneConstruction.jpeg" class="responsive5">  
+      <img src="Images/DroneConstruction.jpeg" class="responsive5">  /* Image sourced from https://www.captechu.edu/blog/drone-use-in-construction-industry */
     </div>
     
     <div class="column1">
       <h2>Precision Agriculture Sevices</h2>
-      <img src="Images/PADrone.jpg" class="responsive5">
+      <img src="Images/PADrone.jpg" class="responsive5"> /* Image sourced from https://cropaia.com/he/drone-precision-agriculture-2/ */
       <p> CDI Consulting precision agriculture drone data gives farmers critical information to aid in achieving reduced costs and maximum yields</p>
       <h3> Precision agriculture services include: </h3>
       <p> NDVI prescription maps</p>
