--- a/about.html
+++ b/about.html
@@ -5,9 +5,11 @@
 <title>CDI GIS Consulting</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
+<link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css">
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
 </head>
+
+<body>
 
 <img src="Images/cdilogo2.png" class="logo">
   
@@ -25,7 +27,7 @@
 <script src="javascript.js"></script>
 
 <!-- Parallex Effect, inspired from https://www.w3schools.com/howto/howto_css_parallax.asp-->
-<body>
+
 <div class="parallax-1">
 	<div class="caption">
 		<span class="border">ABOUT US</span>
