adding stylesheet font

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
 </head>
 
