--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<img src="Images/cdilogo2.png" class="logo"> https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome creation and not sourced from the internet */
+<img src="Images/cdilogo2.png" class="logo"> <!--https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome creation and not sourced from the internet -->
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 
