--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-<div id="container">
+<div id="container-index">
   <div class="row">
     <div class="index-column">
       <h2>Welcome!</h2>
