--- a/port.html
+++ b/port.html
@@ -9,11 +9,8 @@
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
   
 </head>
-<body>
- 
 
 
-</head>
 <body>
 
 <img src="Images/cdilogo2.png" class="logo">
@@ -43,7 +40,10 @@
       <p>WINNIPEG, Manitoba – October 24, 2018 — CDI Consulting released a ground-breaking, digital tool that automatically scans satellite imagery and notifies growers of changes in their fields. Building upon the release of daily satellite imagery in 2017 and over 70 new features and tools launched this year, new Health Change Maps and Notifications function as an integrated toolset designed to accelerate the speed of decision-making when crop issues emerge. This unique precision digital tool pinpoints potential problems, including pests, disease, nutrient deficiencies, inclement weather, missed application, equipment malfunction, drainage issues, and more. This innovative technology enhances the value of daily imagery by helping growers save time, identify issues quicker, and react to crop stress before yield is impacted.</p>
       <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/; slightly modified to suit our fake comapny's page, obviously we did not do this-->
     </div>
-    
+  </div>
+</div>
+<div class="container-port">
+  <div class="row">
     <div class="port-column">
       <h2>Recent Mapping Projects</h2>
       <h3>City of Toronto – Roundabout</h3>
@@ -53,7 +53,10 @@
           <iframe width="540" height="304" src="https://www.youtube.com/embed/VeWLlTsBCm0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/; slightly modified to look as if our consulting group did this, but obviously we did not-->
     </div>
-    
+  </div> 
+</div>
+<div class="container-port">
+  <div class="row">
     <div class="port-column">
       <h2>Leaf Area Index Canada</h2>
       <img src="Images/leafareaindexcanada.jfif" width="400" height="250">
