--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <div class="container-index">
-    <div class="row">
+    <div class="index-row">
       <div class="index-column">
         <h2>Welcome!</h2>
         <p>CDI Consulting is a geospatial consulting firm. We utilize drones and provide drone services to cater to your
@@ -53,7 +53,7 @@
   </div>
 </div>
   <div class="container-index">
-    <div class= "row">
+    <div class= "index-row">
       <div class="index-column">
         <h2>Our Mission</h2>
         <p> We want our customers to get the most out of their experience.</p>
@@ -64,7 +64,7 @@
     </div>
 </div>
 <div class="container-index">
-    <div class="row">
+    <div class="index-row">
       <div class="index-column">
         <h2>Cloud Based Services</h2>
         <img src="Images/Cloud-Computing-1.jpg">
