fixing banner / changing button color

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
 <body>
   
- <header>
- <img src="Images/cdilogo2.png" class="logo"> 
- </header>
+<!-- Written by Christine -->
+<div class="wrapperBanner">
+  <div class="banner-image">
+      <img src="Images/cdilogo2.png" class="logo">    
+  </div>
+</div>
     
  <!-- <img src="GISmap.png" class="headermap"> -->
   
