--- a/services.html
+++ b/services.html
@@ -14,7 +14,12 @@
 
 <body>
 
-<img src="Images/cdilogo2.png" class="logo"> <!--https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome creation and not sourced from the internet -->
+<!-- Written by Christine -->
+<div class="wrapperBanner">
+  <div class="banner-image">
+      <img src="Images/cdilogo2.png" class="logo">            <!--https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome -->
+  </div>                                                      <!--- creation and not sourced from the internet -->    
+</div> 
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 
