--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<!-- Written by Christine -->
 <div class="wrapperBanner">
     <div class="banner-image">
         <img src="Images/cdilogo2.png" class="logo">    
