--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Written by Christine -->
 <div class="wrapperBanner">
   <div class="banner-image">
-      <img src="Images/cdilogo2.png" class="logo">    
+      <img src="Images/cdilogo2.png" alt= "logo" class="logo">    
   </div>
 </div>
     
