--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 <!-- Written by Christine -->
 <div class="wrapperBanner">
   <div class="banner-image">
-      <img src="Images/cdilogo2.png" class="logo">            <!--https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome -->
+      <img src="Images/cdilogo2.png" alt="logo" class="logo">            <!--https://www.captechu.edu/blog/drone-use-in-construction-industrylogo is a custome -->
   </div>                                                      <!--- creation and not sourced from the internet -->    
 </div> 
   
@@ -40,7 +40,7 @@
     <div class="column1">
       <h2>GIS Services</h2>
       <p> CDI Consulting provides a host of cutting edge GIS services that supplies our clients with valuable tools for making precise decisions</p>
-      <img src="Images/GISServicesImage.jpg" class="responsive5"> /* Image sourced from https://foresttech.events/looking-at-the-future-of-gis/ */
+      <img src="Images/GISServicesImage.jpg" alt="GIS Services" class="responsive5"> /* Image sourced from https://foresttech.events/looking-at-the-future-of-gis/ */
       <h3>GIS services include: </h3>
       <p> Address geocoding and reverse geocoding</p>
       <p> Cartography and cartographic modeling</p>
@@ -60,12 +60,12 @@
       <p> 2D high-resolution drone maps</p>
       <p> 3D construction site models</p>
       <p> Statistical reports</p>
-      <img src="Images/DroneConstruction.jpeg" class="responsive5">  /* Image sourced from https://www.captechu.edu/blog/drone-use-in-construction-industry */
+      <img src="Images/DroneConstruction.jpeg" alt= "Drone Construction" class="responsive5">  /* Image sourced from https://www.captechu.edu/blog/drone-use-in-construction-industry */
     </div>
     
     <div class="column1">
       <h2>Precision Agriculture Sevices</h2>
-      <img src="Images/PADrone.jpg" class="responsive5"> /* Image sourced from https://cropaia.com/he/drone-precision-agriculture-2/ */
+      <img src="Images/PADrone.jpg" alt= "Precision Agriculture Drone" class="responsive5"> /* Image sourced from https://cropaia.com/he/drone-precision-agriculture-2/ */
       <p> CDI Consulting precision agriculture drone data gives farmers critical information to aid in achieving reduced costs and maximum yields</p>
       <h3> Precision agriculture services include: </h3>
       <p> NDVI prescription maps</p>
@@ -123,6 +123,8 @@
 </div>
  <p></p>
  <p></p> 
+
+ <!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
 <footer>
     <div class="footer">  
       <div class="leftside-footer">			
@@ -156,7 +158,7 @@
     </div>
 </footer>        
 
-<!-- Footer sourced from georginaisland.com. Section by Danielle Cotton-->
+
   
 
 </body>
