--- a/services.html
+++ b/services.html
@@ -147,7 +147,7 @@
       </div>
     </div>
     <div class="rightside-footer">
-      <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
+      <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" >
     </div>    
     <div class="footer-bottom-area">
       <div class="footer-container">
