--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="footer-bottom-area">
             <div class="footer-container">
               <div class="row">
-                <div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
+                <div class="footer-text">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
                         </div>
             </div>
           </div>
