--- a/port.html
+++ b/port.html
@@ -33,9 +33,9 @@
 </div>  
 
 <script src="javascript.js"></script>
+<!--Portfolio Section by Dani Cotton.-->
 
-
-
+<!--Below is a list of "our" GIS projects which we did not do for real in any way, shape or form. Sources noted in each container. -->
 <div class="container-port">
   <div class="port-row">
     <div class="port-column">
@@ -72,9 +72,10 @@
 </div>
 
 <!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
-  
+ <!--Footer contains our information, a second way to navigate the site, and another log, as well as our copyright--> 
 <footer>
     <div class="footer">  
+      <!--Our basic contact information is presented here-->
         <div class="leftside-footer">			
           <div class="text">
             <h1> CDI GIS Consulting </h1>
@@ -86,7 +87,7 @@
           </div>
         </div> 
         <div class="footer-container">
-
+<!-- Our second navigation bar is down here for those who've scrolled past the nav bar-->
           <a href="contact">Contact</a>
           <a href="port" class="active">Portfolio</a>
           <a href="services">GIS Services</a>
@@ -95,6 +96,7 @@
         </div>
       </div>
         <div class="rightside-footer">
+          <!-- our second company logo is presented here-->
             <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" >
         </div>    
         <div class="footer-bottom-area">
