trying to fix error

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
             <p>We would love to hear from you, leave us a message:</p> 
 
             <label for="firstnlastname">First and Last Name</label>
+            <input id="firstnlastname">
             <input type="text" id="fullname" name="fullname" placeholder="First and Last Name">
             <label for="email">Email</label>           
             <input type="text" id="email" name="email" placeholder="Email">
