--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,9 @@
             <h2>Contact Us</h2>
             <p>We would love to hear from you, leave us a message:</p> 
 
-            <label for="firstnlastname">First and Last Name</label>
-            <input id="firstnlastname">
+            <label>
+                First and Last Name: <input name="firstnlastname">
+            </label> 
             <input type="text" id="fullname" name="fullname" placeholder="First and Last Name">
             <label for="email">Email</label>           
             <input type="text" id="email" name="email" placeholder="Email">
