--- a/contact.html
+++ b/contact.html
@@ -306,6 +306,42 @@
 <div class="contact-info">
 
 </div>
-    
+
+<!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
+
+<footer>
+        <div class="footer">  
+           <!--Our basic contact information is presented here-->
+            <div class="leftside-footer">			
+              <div class="text">
+                <h1> CDI GIS Consulting </h1>
+                  <ul>
+                    <li><b>CDI GIS Consulting Group.</b></li>
+                    <li>Phone (647) 225-1397</li>
+                    <li>info@CDIConsulting.com</li>
+                  </ul> 
+              </div>
+            </div> 
+            <!-- Our second navigation bar is down here for those who've scrolled past the nav bar-->
+            <div class="footer-container">
+                <a href="contact" class="active">Contact</a>
+                <a href="port">Portfolio</a>
+                <a href="services">GIS Services</a>
+                <a href="about">About Us</a>
+                <a href="index">Home</a>
+            </div>
+          </div>
+            <div class="rightside-footer">
+                <!-- our second company logo is presented here-->
+                <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100">
+            </div>    
+            <div class="footer-bottom-area">
+                <div class="footer-container">
+                  <div class="row">
+                    <div class="footer-text">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
+                            </div>
+                </div>
+              </div>
+    </footer>     
 </body>
 </html>
